--- a/index.html
+++ b/index.html
@@ -9,18 +9,26 @@
     <main>
         <div class="calculator">
             <h1>Calculator</h1>
-            <form>
-                <input type="number" name="num1" id="num1">
-                <input type="number" name="num2" id="num2">
-                <select name="operator" id="operator">
-                    <option value="+">+</option>
-                    <option value="-">-</option>
-                    <option value="*">*</option>
-                    <option value="/">/</option>
-                </select>
-                <input type="submit" value="Calculate">
-            </form>
-            <h2 id="result"></h2>
+            <div class="result">
+                <button class="undo"><</button>
+                <div class="display"></div>
+            </div>
+            <div class="buttons">
+                <button class="number" data-number="7">7</button>
+                <button class="number" data-number="8">8</button>
+                <button class="number" data-number="9">9</button>
+                <button class="number" data-number="4">4</button>
+                <button class="number" data-number="5">5</button>
+                <button class="number" data-number="6">6</button>
+                <button class="number" data-number="1">1</button>
+                <button class="number" data-number="2">2</button>
+                <button class="number" data-number="3">3</button>
+                <button class="number" data-number="0">0</button>
+                <button class="operator" data-operator="+">+</button>
+                <button class="operator" data-operator="-">-</button>
+                <button class="operator" data-operator="*">*</button>
+                <button class="operator" data-operator="/">/</button>
+            </div>
         </div>
     </main>
 </body>
