finished calculator buttons

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calc Me Up</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <main>
@@ -28,6 +29,10 @@
                 <button class="operator" data-operator="-">-</button>
                 <button class="operator" data-operator="*">*</button>
                 <button class="operator" data-operator="/">/</button>
+                <button class="compute">=</button>
+                <button class="negate">+/-</button>
+                <button class="decimal">.</button>
+                <button class="clear">C</button>
             </div>
         </div>
     </main>
